//
//  UTViewIDStrings.swift
//  UnderdogTasks
//
//  Created by Myles Cashwell on 10/12/21.
//

import Foundation

struct UTViewIDStrings {
    static let titleTextField  = "Enter Title Here..."
    
    static let addTaskButton    = "addTaskButton"
    static let createTaskButton = "createTaskButton"
    
    static let completeSwipeAction = "completeSwipeAction"
    static let updateSwipeAction   = "updateSwipeAction"
    static let deleteSwipeAction   = "deleteSwipeAction"
    static let undoSwipeAction     = "undoSwipeAction"
//    static let backlogSwipeAction  = "backlogSwipeAction"
}
